# Entropy

./: .gitignore  README.md  pyproject.toml  ruff.toml
native/: README.md
native/frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
native/sidecar/: entropy_sidecar.spec  pyproject.toml  run_sidecar.py
native/sidecar/entropy_sidecar/: __main__.py  app.py  commands.py  contract.py  stream.py
native/sidecar/tests/: test_app.py  test_commands.py  test_contract.py  test_stream.py
scripts/: gen_ticker_snapshot.py  smoke_crypto.py  smoke_equity.py
src/entropy/: __init__.py  __main__.py  app.py  config.py
tests/: conftest.py  test_cli.py  test_wiring.py
tests/bot/: test_adversarial.py  test_behavior_sim.py  test_calibration.py  test_challenger_logging.py  test_cli_args.py  test_cli_console_log.py  test_consensus.py  test_dashboard.py  test_datamodel.py  test_ema_cross.py  test_integration.py  test_ledger.py  test_live_executor.py  test_momentum_scalper.py  test_new_features.py  test_paper_executor.py  test_portfolio.py  test_profiles.py  test_risk_manager.py  test_runner.py
tests/data/: test_universe.py  test_watchlist.py
tests/engine/: test_breadth.py  test_candles.py  test_engine.py  test_engine_cfg_hot_apply.py  test_engine_config.py  test_engine_perf.py  test_engine_reset_session.py  test_engine_snapshot_side_effects.py  test_engine_windows_positional.py  test_events.py  test_events_windowname.py  test_momentum_horizon.py  test_rate.py  test_timeframe.py  test_windows_extreme.py
tests/feeds/: test_bus.py  test_crypto_wiring.py  (+5 more)
(+121 files in other folders)
