[project]
name = "entropy-sidecar"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = ["entropy", "fastapi>=0.115", "uvicorn>=0.30", "websockets>=13", "msgspec>=0.18"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27", "pyinstaller>=6"]

[tool.uv.sources]
entropy = { path = "../..", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entropy_sidecar"]
